add-sound-commit

--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -80,7 +80,8 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    
+    <audio src="./sound/mixkit-long-pop-2358.wav"></audio>
+
     <div class="interactive-wrapper">
       <input type="text" id="datetime-picker" />
       <div class="button-container">
